log
Wed, May 14, 2025  9:29:57 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  9:38:59 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:21: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int fila = -1 , col = -1;
                     ^~~
sudoku.c:55:9: error: variable 'fila' set but not used [-Werror=unused-but-set-variable]
     int fila = -1 , col = -1;
         ^~~~
cc1.exe: all warnings being treated as errors
f6463c6
Wed, May 14, 2025  9:47:13 PM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:13: error: implicit declaration of function 'insert' [-Werror=implicit-function-declaration]
             insert(list, new);
             ^~~~~~
cc1.exe: all warnings being treated as errors
f66235f
Wed, May 14, 2025  9:47:54 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
450bc4e
Wed, May 14, 2025 10:04:07 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5a4358d
Wed, May 14, 2025 10:10:10 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
f0c6777
Wed, May 14, 2025 10:13:48 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2798e5c
Fri, May 16, 2025 11:36:55 PM: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:121:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
51c34a1
Fri, May 16, 2025 11:37:32 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:121:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
4b18b4d
Fri, May 16, 2025 11:42:51 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:121:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cb09aff
Fri, May 16, 2025 11:43:03 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
ea796b5
Fri, May 16, 2025 11:45:12 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  6|2
total_score: 45/70
3e5cab0
Fri, May 16, 2025 11:46:58 PM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|2
total_score: 45/70
eaf00b9
Fri, May 16, 2025 11:47:34 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
f9f6e3d
Fri, May 16, 2025 11:48:41 PM: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  10|0
total_score: 70/70
8e62fd9
